# MovieReserveSystem

./: README.md  db.sqlite3  pyproject.toml
MovieReserveSystem/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MovieReserveSystem/migrations/: 0001_initial.py  0002_movie_is_deleted_reservation_is_deleted_and_more.py  0002_reservation_seat.py  0003_alter_movie_is_deleted_alter_reservation_is_deleted_and_more.py  0003_remove_reservation_seat_number.py  0004_rename_data_and_time_schedule_start_at_and_more.py  0005_hole.py  0006_schedule_hole.py  0007_movie_screen_time.py  0008_movie_poster.py  0009_remove_movie_thumbnail.py  0010_seat.py
MovieReserveSystem/templates/: base.html  datas.html  header.html  index.html  login.html  movies.html  reservation.html  reservation_list.html  schedule.html  seating_chart.html  signup.html  signup_and_reservation.html
config/: settings.py  urls.py
static/css/: base.css  movies.css  styles.css
static/js/: reservation.js  script.js
